Added a histogram dialog that shows the current exposure histogram and allows the user to manually adjust it. Also some other minor fixes/adjustments.

--- a/DSImager.Application/Views/MainWindow.xaml
+++ b/DSImager.Application/Views/MainWindow.xaml
@@ -223,7 +223,9 @@
                 <Button FontFamily="{DynamicResource FontAwesome}" 
 					Content="&#xf1fe;" 
 					Margin="4,0"
-					ToolTip="Histogram" Foreground="White"/>
+					ToolTip="Histogram" Foreground="White"
+                        Command="{Binding OpenHistogramDialogCommand}"
+                        />
             </ToolBar>
             <ToolBar HorizontalAlignment="Left" FontSize="24">
                 <Label Content="Capture Session" FontSize="14"/>                
