--- a/DSImager.Application/Views/SessionDialog.xaml
+++ b/DSImager.Application/Views/SessionDialog.xaml
@@ -1,16 +1,237 @@
-﻿<views:BaseView x:TypeArguments="viewModels:SessionDialogViewModel" x:Class="DSImager.Application.Views.SessionDialog"
+﻿<views:BaseView
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
         xmlns:views="clr-namespace:DSImager.Application.Views"
         xmlns:converters="clr-namespace:DSImager.Application.Converters"
-        Title="SessionDialog" Height="300" Width="300" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:TypeArguments="viewModels:SessionDialogViewModel" x:Class="DSImager.Application.Views.SessionDialog"
+        mc:Ignorable="d"
+        Title="Start a new session" Height="440" Width="760" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
         BorderBrush="Black" BorderThickness="1"
-        WindowStartupLocation="CenterScreen">
-    <Grid d:DataContext="{d:DesignInstance Type=viewModels:SessionDialogViewModelDT, IsDesignTimeCreatable=True}">
-        
+        WindowStartupLocation="CenterScreen" MinWidth="760" MinHeight="440">
+    <Window.Resources>
+        <Style x:Key="SessionToolbarStyle" TargetType="{x:Type ToolBar}">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToolBar}">
+                        <Border x:Name="Border" BorderBrush="{DynamicResource TransparentWhiteBrush}" BorderThickness="1" Background="{DynamicResource TransparentWhiteBrush}" CornerRadius="2">
+                            <DockPanel>
+                                <Thumb x:Name="ToolBarThumb" Width="10">
+                                    <Thumb.Style>
+                                        <Style TargetType="{x:Type Thumb}">
+                                            <Setter Property="OverridesDefaultStyle" Value="True"/>
+                                            <Setter Property="Cursor" Value="SizeAll"/>
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="{x:Type Thumb}">
+                                                        <Border Background="Transparent" Margin="0,3" SnapsToDevicePixels="True">
+                                                            <Rectangle Width="4.9">
+                                                                <Rectangle.Fill>
+                                                                    <DrawingBrush TileMode="Tile" Viewbox="0,0,5,4" Viewport="0,0,5,4" ViewportUnits="Absolute" ViewboxUnits="Absolute">
+                                                                        <DrawingBrush.Drawing>
+                                                                            <GeometryDrawing Brush="{DynamicResource GrayBrush3}">
+                                                                                <GeometryDrawing.Geometry>
+                                                                                    <GeometryGroup>
+                                                                                        <RectangleGeometry Rect="0,0,1,1"/>
+                                                                                        <RectangleGeometry Rect="4,0,1,1"/>
+                                                                                        <RectangleGeometry Rect="2,2,1,1"/>
+                                                                                    </GeometryGroup>
+                                                                                </GeometryDrawing.Geometry>
+                                                                            </GeometryDrawing>
+                                                                        </DrawingBrush.Drawing>
+                                                                    </DrawingBrush>
+                                                                </Rectangle.Fill>
+                                                            </Rectangle>
+                                                        </Border>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Style>
+                                    </Thumb.Style>
+                                </Thumb>
+                                <ToolBarPanel x:Name="PART_ToolBarPanel" IsItemsHost="True" Margin="0,1,2,2"/>
+                            </DockPanel>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsOverflowOpen" Value="True">
+                                <Setter Property="IsEnabled" TargetName="ToolBarThumb" Value="False"/>
+                            </Trigger>
+                            <Trigger Property="ToolBarTray.IsLocked" Value="True">
+                                <Setter Property="Visibility" TargetName="ToolBarThumb" Value="Collapsed"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type={x:Type viewModels:SessionDialogViewModelDT}}" Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="55"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="23*"/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Row="0" Grid.ColumnSpan="2" Content="Stored Sessions"/>
+        <Grid Grid.Row="1" Grid.Column="0" Margin="0,10,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="108*"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+            <ListBox Background="#FF1E1E1E" Margin="0" VerticalAlignment="Stretch" >
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+                <System:Object/>
+            </ListBox>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="25" VerticalAlignment="Top" Margin="0,5,0,0">
+                <ToolBarTray Height="25">
+                    <ToolBarTray.Style>
+                        <Style TargetType="{x:Type ToolBarTray}">
+                            <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
+                            <Setter Property="IsLocked" Value="True"/>
+                        </Style>
+                    </ToolBarTray.Style>
+                    <ToolBar ToolBar.OverflowMode="Never" Style="{DynamicResource SessionToolbarStyle}" Margin="0">
+                        <ToolBar.Background>
+                            <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                                <GradientStop Offset="0"/>
+                                <GradientStop Color="#00FFFBFF" Offset="0.5"/>
+                                <GradientStop Color="#00F7F7F7" Offset="1"/>
+                            </LinearGradientBrush>
+                        </ToolBar.Background>
+                        <Button Height="20" Width="20" BorderThickness="0" x:Name="NewSessionButton" Margin="0,0,5,0" Command="{Binding CreateNewSessionEntryCommand}">
+                            <fa:ImageAwesome Icon="FileOutlined" Foreground="White"/>
+                        </Button>
+                        <Button Height="20" Width="20" BorderThickness="0" x:Name="CopySessionButton" Margin="0,0,5,0" Command="{Binding CopySelectedSessionEntryCommand}">
+                            <fa:ImageAwesome Icon="Copy" Foreground="White"/>
+                        </Button>
+                        <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSessionButton" Command="{Binding DeleteSelectedSessionEntryCommand}">
+                            <fa:ImageAwesome Icon="Close" Foreground="White"/>
+                        </Button>
+                    </ToolBar>
+                </ToolBarTray>
+                <!--<Button Height="25" Width="25" BorderThickness="0"></Button>-->
+            </StackPanel>
+        </Grid>
+
+        <StackPanel Margin="0,0,0,0" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" >
+            <Button Content="Start Session" Margin="0,0,0,5" />
+            <Button Content="Close" />
+        </StackPanel>
+        <Grid Grid.Row="1" Grid.Column="1" Margin="10,10,10,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="72"/>
+                <RowDefinition Height="134*"/>
+            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="36"/>
+                    <RowDefinition Height="36"/>
+                </Grid.RowDefinitions>
+                <TextBox Grid.Row="0" Text="Pleiades" Margin="0,0,0,10"/>
+                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                    <CheckBox Content="Pause after each sequence" HorizontalAlignment="Left" Margin="0,0,20,10" />
+                    <Label Content="Repeat times" HorizontalAlignment="Left" VerticalContentAlignment="Center" BorderThickness="0,0,0,10"/>
+                    <TextBox Margin="0,0,0,10" Width="50"/>
+                    <CheckBox Content="Pause after each repeat" HorizontalAlignment="Left" Margin="20,0,20,10" />
+                </StackPanel>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="184*"/>
+                    <ColumnDefinition Width="87*"/>
+                    <ColumnDefinition Width="74*"/>
+                    <ColumnDefinition Width="113*"/>
+                    <ColumnDefinition Width="74*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="36"/>
+                    <RowDefinition Height="96*"/>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <Label Content="Imaging Sequences" Grid.ColumnSpan="5"/>
+                <ListBox Grid.Column="0" Background="#FF1E1E1E" VerticalAlignment="Stretch" Grid.Row="1" Margin="0">
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                    <System:Object/>
+                </ListBox>
+                <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Height="25" Width="74" VerticalAlignment="Top" Margin="0,5,0,0">
+                    <ToolBarTray Height="25">
+                        <ToolBarTray.Style>
+                            <Style TargetType="{x:Type ToolBarTray}">
+                                <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
+                                <Setter Property="IsLocked" Value="True"/>
+                            </Style>
+                        </ToolBarTray.Style>
+                        <ToolBar ToolBar.OverflowMode="Never" Style="{DynamicResource SessionToolbarStyle}" Margin="0">
+                            <ToolBar.Background>
+                                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                                    <GradientStop Offset="0"/>
+                                    <GradientStop Color="#00FFFBFF" Offset="0.5"/>
+                                    <GradientStop Color="#00F7F7F7" Offset="1"/>
+                                </LinearGradientBrush>
+                            </ToolBar.Background>
+                            <Button Height="20" Width="20" BorderThickness="0" x:Name="NewSequenceButton" Margin="0,0,5,0" Command="{Binding CreateNewSequenceEntryCommand}">
+                                <fa:ImageAwesome Icon="FileOutlined" Foreground="White"/>
+                            </Button>
+                            <Button Height="20" Width="20" BorderThickness="0" x:Name="CopySequenceButton" Margin="0,0,5,0" Command="{Binding CopySelectedSequenceEntryCommand}">
+                                <fa:ImageAwesome Icon="Copy" Foreground="White"/>
+                            </Button>
+                            <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSequenceButton" Command="{Binding DeleteSelectedSequenceEntryCommand}">
+                                <fa:ImageAwesome Icon="Close" Foreground="White"/>
+                            </Button>
+                        </ToolBar>
+                    </ToolBarTray>
+                    <!--<Button Height="25" Width="25" BorderThickness="0"></Button>-->
+                </StackPanel>
+                <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" Text="Luminance" Grid.ColumnSpan="4" Height="26"></TextBox>
+                <Label Content="Exposure (s)" Grid.Column="1" HorizontalAlignment="Right" Margin="0,36,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
+                <Label Content="Binning" Grid.Column="1" HorizontalAlignment="Right" Margin="0,72,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
+                <Label Content="Format" Grid.Column="1" HorizontalAlignment="Right" Margin="0,108,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
+                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26" IsEditable="True" ItemsSource="{Binding PresetExposureValues}"/>
+                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26" ItemsSource="{Binding BinningModeOptions}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Value}"></TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,108,0,0" Height="26" ItemsSource="{Binding FileTypeOptions}"></ComboBox>
+                <Label Content="Frame Count" Grid.Column="3" HorizontalAlignment="Right" Margin="0,36,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
+                <Label Content="Extension" Grid.Column="3" HorizontalAlignment="Right" Margin="0,72,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
+                <TextBox Grid.Column="4" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26"></TextBox>
+                <TextBox Grid.Column="4" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26"></TextBox>
+            </Grid>
+        </Grid>
     </Grid>
 </views:BaseView>
