--- a/DSImager.Application/Views/SessionDialog.xaml
+++ b/DSImager.Application/Views/SessionDialog.xaml
@@ -3,6 +3,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         xmlns:viewModels="clr-namespace:DSImager.ViewModels;assembly=DSImager.ViewModels"
         xmlns:views="clr-namespace:DSImager.Application.Views"
@@ -13,6 +14,7 @@
         BorderBrush="Black" BorderThickness="1"
         WindowStartupLocation="CenterScreen" MinWidth="760" MinHeight="440">
     <Window.Resources>
+        <converters:NotNullConverter x:Key="NotNullConverter"></converters:NotNullConverter>
         <Style x:Key="SessionToolbarStyle" TargetType="{x:Type ToolBar}">
             <Setter Property="SnapsToDevicePixels" Value="True"/>
             <Setter Property="OverridesDefaultStyle" Value="True"/>
@@ -87,21 +89,12 @@
                 <RowDefinition Height="108*"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
-            <ListBox Background="#FF1E1E1E" Margin="0" VerticalAlignment="Stretch" >
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
-                <System:Object/>
+            <ListBox Background="#FF1E1E1E" Margin="0" VerticalAlignment="Stretch" ItemsSource="{Binding SavedSessions, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedSessionIndex}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}"></TextBlock>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
             </ListBox>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Height="25" VerticalAlignment="Top" Margin="0,5,0,0">
                 <ToolBarTray Height="25">
@@ -143,20 +136,23 @@
                 <RowDefinition Height="72"/>
                 <RowDefinition Height="134*"/>
             </Grid.RowDefinitions>
-            <Grid>
+            <Grid IsEnabled="{Binding SelectedSession, Converter={StaticResource NotNullConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="36"/>
                     <RowDefinition Height="36"/>
                 </Grid.RowDefinitions>
-                <TextBox Grid.Row="0" Text="Pleiades" Margin="0,0,0,10"/>
+                <TextBox Grid.Row="0" Text="{Binding SelectedSession.Name}" Margin="0,0,0,10"/>
                 <StackPanel Grid.Row="1" Orientation="Horizontal">
-                    <CheckBox Content="Pause after each sequence" HorizontalAlignment="Left" Margin="0,0,20,10" />
+                    <CheckBox Content="Pause after each sequence" HorizontalAlignment="Left" Margin="0,0,20,10"
+                              IsChecked="{Binding SelectedSession.PauseAfterEachSequence}"/>
                     <Label Content="Repeat times" HorizontalAlignment="Left" VerticalContentAlignment="Center" BorderThickness="0,0,0,10"/>
-                    <TextBox Margin="0,0,0,10" Width="50"/>
-                    <CheckBox Content="Pause after each repeat" HorizontalAlignment="Left" Margin="20,0,20,10" />
+                    <TextBox Margin="0,0,0,10" Width="50"
+                             Text="{Binding SelectedSession.RepeatTimes}"/>
+                    <CheckBox Content="Pause after each repeat" HorizontalAlignment="Left" Margin="20,0,20,10"
+                              IsChecked="{Binding SelectedSession.PauseAfterEachRepeat}"/>
                 </StackPanel>
             </Grid>
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" IsEnabled="{Binding SelectedSession, Converter={StaticResource NotNullConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="184*"/>
                     <ColumnDefinition Width="87*"/>
@@ -170,20 +166,12 @@
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
                 <Label Content="Imaging Sequences" Grid.ColumnSpan="5"/>
-                <ListBox Grid.Column="0" Background="#FF1E1E1E" VerticalAlignment="Stretch" Grid.Row="1" Margin="0">
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
-                    <System:Object/>
+                <ListBox Grid.Column="0" Background="#FF1E1E1E" VerticalAlignment="Stretch" Grid.Row="1" Margin="0" ItemsSource="{Binding SelectedSession.ImageSequences, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{Binding SelectedSequenceIndex}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"></TextBlock>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
                 </ListBox>
                 <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Height="25" Width="74" VerticalAlignment="Top" Margin="0,5,0,0">
                     <ToolBarTray Height="25">
@@ -209,28 +197,43 @@
                             </Button>
                             <Button Height="20" Width="20" BorderThickness="0" x:Name="DeleteSequenceButton" Command="{Binding DeleteSelectedSequenceEntryCommand}">
                                 <fa:ImageAwesome Icon="Close" Foreground="White"/>
+                                <!-- validation: http://www.codearsenal.net/2012/06/wpf-textbox-validation-idataerrorinfo.html#.Vp_Qk-aTzdE -->
                             </Button>
                         </ToolBar>
                     </ToolBarTray>
                     <!--<Button Height="25" Width="25" BorderThickness="0"></Button>-->
                 </StackPanel>
-                <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" Text="Luminance" Grid.ColumnSpan="4" Height="26"></TextBox>
+                <TextBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" Grid.ColumnSpan="4" Height="26"
+                         Text="{Binding SelectedSequence.Name}" IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"></TextBox>
                 <Label Content="Exposure (s)" Grid.Column="1" HorizontalAlignment="Right" Margin="0,36,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
                 <Label Content="Binning" Grid.Column="1" HorizontalAlignment="Right" Margin="0,72,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
                 <Label Content="Format" Grid.Column="1" HorizontalAlignment="Right" Margin="0,108,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
-                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26" IsEditable="True" ItemsSource="{Binding PresetExposureValues}"/>
-                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26" ItemsSource="{Binding BinningModeOptions}">
+                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26" IsEditable="True" 
+                          ItemsSource="{Binding PresetExposureValues}"
+                          Text="{Binding SelectedSequence.ExposureDuration}"
+                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"/>
+                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26" ItemsSource="{Binding BinningModeOptions}"
+                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Value}"></TextBlock>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,108,0,0" Height="26" ItemsSource="{Binding FileTypeOptions}"></ComboBox>
+                <ComboBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,108,0,0" Height="26" ItemsSource="{Binding FileTypeOptions}"
+                          Text="{Binding SelectedSequence.Format}"
+                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"></ComboBox>
                 <Label Content="Frame Count" Grid.Column="3" HorizontalAlignment="Right" Margin="0,36,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
                 <Label Content="Extension" Grid.Column="3" HorizontalAlignment="Right" Margin="0,72,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
-                <TextBox Grid.Column="4" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26"></TextBox>
-                <TextBox Grid.Column="4" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26"></TextBox>
+                <Label Content="Enabled" Grid.Column="3" HorizontalAlignment="Right" Margin="0,108,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26"/>
+                <TextBox Grid.Column="4" Grid.Row="1" VerticalAlignment="Top" Margin="0,36,0,0" Height="26"
+                         Text="{Binding SelectedSequence.NumExposures}"
+                         IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"></TextBox>
+                <TextBox Grid.Column="4" Grid.Row="1" VerticalAlignment="Top" Margin="0,72,0,0" Height="26"
+                         Text="{Binding SelectedSequence.Extension}"
+                         IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"></TextBox>
+                <CheckBox IsChecked="{Binding SelectedSequence.Enabled}" Grid.Column="4" HorizontalAlignment="Left" Margin="0,114,0,0" Grid.Row="1" VerticalAlignment="Top"
+                          IsEnabled="{Binding SelectedSequence, Converter={StaticResource NotNullConverter}}"/>
             </Grid>
         </Grid>
     </Grid>
